# fsync

./: .gitmodules  CMakeLists.txt  README.md
certs/: node.key.pem
certs/certificates/: 9d82ea43.0  9d82ea43.1  c76fe929.0
cmake/: FindLIBRSYNC.cmake  FindLiblmdb.cmake  FindLibrsync.cmake
cmake/binn/: CMakeLists.txt
cmake/lmdb/: CMakeLists.txt  stdafx.h
cmake/openssl/: CMakeLists.txt
cmake/rsync/: CMakeLists.txt
docs/: Protocol descriptionfor.docx  architecture.graphml  nodes_conversation.graphml  sequence_diagram.graphml
fclient/: CMakeLists.txt
fclient/src/: core.c  core.h  main.c
fcommon/include/: config.h
fcommon/include/fcommon/: messages.h
fcommon/src/: config.h  limits.h  messages.h
fdb/: CMakeLists.txt
fdb/include/fdb/: db.h
fdb/include/fdb/sync/: config.h  dirs.h  download_info.h  files.h  ids.h  nodes.h  statuses.h  sync_files.h
fdb/src/: config.h  db.c  db.h
fdb/src/sync/: config.c  config.h  dirs.c  dirs.h  download_info.c  download_info.h  files.c  files.h  ids.c  ids.h  nodes.c  nodes.h  statuses.c  statuses.h  sync_files.c  sync_files.h
fiface/: CMakeLists.txt
filink/: CMakeLists.txt
filink/include/filink/: interface.h
filink/src/: interface.c  interface.h  protocol.c  protocol.h
fnet/: CMakeLists.txt
fnet/include/fnet/: marshaller.h  transport.h
fnet/src/: config.c  config.h  ip_address.c  ip_address.h  marshaller.h  module.c  module.h  socket.h  ssl_transport.c  ssl_transport.h  tcp_transport.c  tcp_transport.h  transport.c  transport.h
fnet/src/old/platform/gnuc/: net.cpp  socket.cpp  socket.h
fnet/src/old/platform/msvc/: net.cpp  socket.cpp  socket.h
fnet/src/os/linux/: marshaller.c  socket.c
fnet/src/os/windows/: marshaller.c  socket.c
fscripts/: create_cert.py  create_root_cert.py  openssl.cnf
fscripts/root/ca/: openssl.cnf
fsync/: CMakeLists.txt
fsync/include/fsync/: device.h  fsutils.h  fsync.h  search_engine.h  search_engine_sync_agent.h  sync.h  sync_engine.h
fsync/src/: config.h  device.h  fcomposer.c  fcomposer.h  file_assembler.c  file_assembler.h  fsutils.c  fsutils.h  fsync.c  fsync.h  rstream.c  rstream.h  rsync.c  rsync.h  search_engine.c  search_engine.h  search_engine_sync_agent.c  search_engine_sync_agent.h  sync.c  sync.h  sync_agents.h  sync_engine.c  sync_engine.h  synchronizer.c  synchronizer.h
fsync/src/os/windows/: device.c  win_fsutils.c
fsyncsvc/: CMakeLists.txt
ftest/: CMakeLists.txt
ftest/src/: fdb.c  fs.c  fsync.c  futils.c  main.c  test.h
ftools/fdbtool/: CMakeLists.txt
ftools/fdbtool/src/: dbtool.c  dbtool.h  main.c
futils/: CMakeLists.txt
futils/include/futils/: errno.h  fs.h  md5.h  msgbus.h  mutex.h  prefix_tree.h  queue.h  static_allocator.h  static_assert.h  stream.h  utils.h  uuid.h  vector.h
futils/src/: errno.h  fs.c  fs.h  log.c  log.h  md5.c  md5.h  msgbus.c  msgbus.h  mutex.h  prefix_tree.c  prefix_tree.h  queue.c  queue.h  static_allocator.c  static_allocator.h  static_assert.h  stream.c  stream.h  utils.h  uuid.h  vector.c  vector.h
futils/src/os/linux/: fs.c  uuid.c
futils/src/os/windows/: fs.c  uuid.c
libs/liblmdb/: readme.txt
libs/openssl/: CMakeLists.txt
libs/openssl/include/openssl/: pqueue.h  srtp.h  ssl.h  ssl23.h  x509_vfy.h
libs/openssl/src/: x509_vpm.c
libs/rsync/: readme.txt
libs/sqlite/: CMakeLists.txt
libs/sqlite/include/: sqlite3.h
libs/vedis/: CMakeLists.txt
libs/vedis/include/: vedis.h
libs/vedis/src/: readme.txt
